syntax = "proto3";

package roles;

option go_package = "roles/pkg/grpc/roles";

service Roles {
  rpc GetUserRoles(UserIdRequest) returns (UserRolesResponse) {}
}

message UserIdRequest {
  string ID = 1;

}

message UserRolesResponse {
  repeated string Roles = 1;
}